--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 </head>
 
 <body>
-
-<h1></h1>
-
+<div class="content">
+    <h1>Akbarali Salohiddinov</h1>
+</div>
+<div class="avatar-profile">
+    <img src="images/jenya.jpg" alt="avatar">
+</div>
 
 
 </body>
