--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akbarali Salohiddinov | Backend-end Developer</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-<div class="content">
-    <h1>Akbarali Salohiddinov</h1>
-</div>
-<div class="avatar-profile">
-    <img src="images/jenya.jpg" alt="avatar">
-</div>
-
+    <div class="title-profile">
+        <hr>
+        <h1>Akbarali Salohiddinov</h1>
+        <hr>
+    </div>
+    <div class="avatar-profile">
+        <img src="images/jenya.jpg" alt="avatar">
+    </div>
 
 </body>
 
